- print target path of pdf

--- a/config_example.yaml
+++ b/config_example.yaml
@@ -5,6 +5,7 @@ source_folder: "docs"
 split_pdf: True
 save_pattern: "%d_%k_%m"
 date_format: "%Y-%m-%d"
+print_paths: True
 
 folders:
     Finanzen:
